# fast-cargo

./: Cargo.toml  csv.ps1  run.ps1  tables.ps1
crates/bevy-hello-world/: Cargo.toml
crates/bevy-hello-world-bin/: Cargo.toml
crates/bevy-hello-world-bin/src/: main.rs
crates/bevy-hello-world/src/: lib.rs  main.rs
crates/hello-world/: Cargo.toml
crates/hello-world-bin/: Cargo.toml
crates/hello-world-bin/src/: main.rs
crates/hello-world-dylib/: Cargo.toml
crates/hello-world-dylib/src/: lib.rs
crates/summarize/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/summarize/src/: main.rs
