cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 2
codegen-backend = "cranelift" # cascades from `[profile.dev]`
codegen-units = 1

# opt-level = 2
# codegen-backend = "llvm" # needed since "cranelift" cascades from `[profile.dev]`