cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]


### Dev Profiles - LLVM
[profile._dev]
inherits = "dev"
codegen-backend = "llvm"

[profile.iter]
inherits = "dev"
codegen-backend = "llvm"

[profile.iter.package."*"]
opt-level = 2


### Dev Profiles - Cranelift 
[profile.dev_clif]
inherits = "dev"
codegen-backend = "cranelift"

[profile.iter_clif]
inherits = "dev"
codegen-backend = "cranelift"

[profile.iter_clif.package."*"]
opt-level = 2


### Release Profiles
[profile.rel]
inherits = "release"
codegen-backend = "llvm"

[profile.rel_clif]
inherits = "release"
codegen-backend = "cranelift"

