cargo-features = ["codegen-backend"]

[package]
name = "bevy-hello-world-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy-hello-world = { path = "../bevy-hello-world" }

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 2
codegen-backend = "cranelift" # cascades from `[profile.dev]`
codegen-units = 1