cargo-features = ["codegen-backend"]

[package]
name = "bevy-hello-world"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
bevy = { version = "0.15.3", default-features = false }

[features]
# Expose dynamic linking feature for bevy
dynamic_linking = ["bevy/dynamic_linking"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 2
codegen-backend = "llvm" # needed since "cranelift" cascades from `[profile.dev]`