[package]
name = "summarize"
description = "Produces a human readable summary of `measureme` profiling data"
version = "12.0.1"
authors = ["Wesley Wiser <wwiser@gmail.com>", "Michael Woerister <michaelwoerister@posteo>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/measureme"

[dependencies]
analyzeme = { version = "12.0.1" }
clap = { version = "4.5.0", features = ["derive"] }
measureme = { version = "12.0.1" }
prettytable-rs = "0.10"
rustc-hash = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
